<resources>
    <string name="app_name">NoAMP</string>
    <string name="Subhead"><b>Open AMP page without AMP</b></string>
    <string name="AppHelp1">When viewing an AMP page (e.g., in Chrome), use <b>Share</b> action and select this app to open that page without AMP (using the default browser, not necessarily the same browser).</string>
    <string name="AppHelp2">This works best on a page that Google has converted to AMP on the fly from a <i>non-AMP source</i> (e.g., mobile.nytimes.com). <i>Hosted</i> AMP pages (e.g., amp.usatoday.com) cannot be directly converted to equivalent non-AMP pages.</string>
    <string name="WhatsNew"><b>What\'s New: Test</b> button to open AMP page for testing.</string>
    <string name="AMPpage">https://www.nbcnews.com/news/amp/rcna205657</string>
    <string name="Support"><b>Support</b>: For questions, suggestions or problems, use the <b>Help</b> button below. If needed, you can open an <b>Issue</b>, give us details (URL, browser, Android version, device) and we will do our best to fix it!</string>
    <string name="Privacy"><b>Privacy:</b> No personal or browsing data is collected or shared, except for opening a non-AMP page when you request it.</string>
    <string name="Disclaimers"><b>Disclaimers</b>: Use at your own risk.\nNot affiliated with or endorsed by Google.</string>
    <string name="close">Close</string>
    <string name="test">Test</string>
    <string name="help">Help</string>
</resources>
